fixed missing background imgs

--- a/static/css/simple.css
+++ b/static/css/simple.css
@@ -2,7 +2,7 @@ body {
     font-family: Roboto,sans-serif;
     font-weight: 300;
     color: #12293a;
-    background: url("/static/img/comms_bg_grey.svg") top right no-repeat;
+    background: url("../img/comms_bg_grey.svg") top right no-repeat;
     text-align: center;
 }
 #header {
@@ -44,7 +44,7 @@ p, li {
 }
 
 #footer {
-    background: url("/static/img/comms_footer_bg.svg") top left no-repeat;
+    background: url("../img/comms_footer_bg.svg") top left no-repeat;
     background-color: #e4e4e4;
     padding-top: 2em;
 }
@@ -149,4 +149,47 @@ table.pretty th {
     color: white;
     font-weight: bold;
     background-color: #006983;
+}
+
+/* Tabs */
+/* Style the tab */
+div.tab {
+    overflow: hidden;
+    border: 1px solid #ccc;
+    background-color: #f1f1f1;
+}
+
+/* Style the buttons inside the tab */
+div.tab button {
+    background-color: inherit;
+    float: left;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding: 14px 16px;
+    transition: 0.3s;
+}
+
+/* Change background color of buttons on hover */
+div.tab button:hover {
+    background-color: #ddd;
+}
+
+/* Create an active/current tablink class */
+div.tab button.active {
+    background-color: #ccc;
+}
+
+/* Style the tab content */
+.tabcontent {
+    display: none;
+    padding: 6px 12px;
+    border: 1px solid #ccc;
+    border-top: none;
+}
+
+button {
+    font-weight: 400;
+    font-size: 100%;
+    font-family: Roboto,sans-serif;
 }
